--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,4 +6,4 @@ ENV TZ=Europe/Zurich
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt update && apt dist-upgrade -y
 
-RUN apt install -y g++ clang ccache cmake python3 make libopenmpi-dev libhdf5-dev libhdf5-mpi-dev doxygen && update-alternatives --install /usr/bin/python python /usr/bin/python3 10
+RUN apt install -y g++ clang ccache cmake python3 make libhdf5-dev libhdf5-mpi-dev doxygen libopenmpi-dev && update-alternatives --install /usr/bin/python python /usr/bin/python3 10
