--- a/examples/codesByTopic/navierStokesModels/CMakeLists.txt
+++ b/examples/codesByTopic/navierStokesModels/CMakeLists.txt
@@ -17,13 +17,15 @@ target_link_libraries(${PROJECT_NAME} palabos)
 if(ENABLE_MPI)
     target_link_libraries(${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
 endif()
+message(${CMAKE_CURRENT_SOURCE_DIR})
 
 if(BUILD_TESTING)
     set(PROCESS_SUBSTITUTION \"<\ <\(tee\ test/output.dat \)\ >\ >\(tee\ test/output.dat\)\")
     add_custom_target(${PROJECT_NAME}_test
         ALL
         DEPENDS ${PROJECT_NAME}
-        COMMAND ${PROJECT_NAME} ${PROCESS_SUBSTITUTION}
+        COMMAND "LSAN_OPTIONS=suppressions=/home/orestis/git/palabos/MyAsan.supp" ./${PROJECT_NAME} ${PROCESS_SUBSTITUTION}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         COMMENT "run generated test in ${CMAKE_CURRENT_SOURCE_DIR}"
         SOURCES ./${EXECUTABLE_NAME}.cpp
     )
