corrected cmakelists to actually output something.

--- a/examples/showCases/vofMultiPhase/CMakeLists.txt
+++ b/examples/showCases/vofMultiPhase/CMakeLists.txt
@@ -17,11 +17,10 @@ if(ENABLE_MPI)
 endif()
 
 if(BUILD_TESTING)
-    set(PROCESS_SUBSTITUTION \"<\ <\(tee\ test/output.dat \)\ >\ >\(tee\ test/output.dat\)\")
     add_custom_target(${PROJECT_NAME}_test
         ALL
         DEPENDS ${PROJECT_NAME}
-        COMMAND "LSAN_OPTIONS=suppressions=${LSAN_SUPPRESSION_FILE}" ./${PROJECT_NAME} tmp 1.e-5 100 80.0 40 1.e-3 101${PROCESS_SUBSTITUTION}
+        COMMAND "LSAN_OPTIONS=suppressions=${LSAN_SUPPRESSION_FILE}" ./${PROJECT_NAME} tmp 1.e-5 100 80.0 40 1.e-3 101 > test/output.dat || (cat test/output.dat\; exit 1)
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         COMMENT "run generated test in ${CMAKE_CURRENT_SOURCE_DIR}"
         SOURCES ./${EXECUTABLE_NAME}.cpp
