Added malloc/realloc/calloc in LAsan.sup for supressing leaks in MPI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,7 @@ test:
     script: 
         - pwd
         - cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Test -DCMAKE_CXX_COMPILER=clang++ 
+        - cmake .. -DCMAKE_BUILD_TYPE=Test
         - cmake --build .
         - cmake --build . -- test
 
