--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,11 +3,12 @@ FROM ubuntu:latest
 LABEL Description="Palabos Docker image, based on ubuntu:latest " maintainer="orestis.malaspinas@hesge.ch" Version="0.1"
 
 # RUN sed -i'' 's/archive.ubuntu.com/us.archive.ubuntu.com/' /etc/apt/sources.list 
+RUN sed -i'' 's/archive.ubuntu.com/ch.archive.ubuntu.com/' /etc/apt/sources.list 
 # RUN apt-select -c -t 5 -C CH && cp /etc/apt/sources.list /etc/apt/sources.list.backup && mv sources.list /etc/apt/
 RUN apt update && apt dist-upgrade -y
 ENV TZ=Europe/Zurich
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-RUN apt install -y g++ clang clang-format-12 ccache cmake python3 make libopenmpi-dev libhdf5-dev libhdf5-mpi-dev doxygen && update-alternatives --install /usr/bin/python python /usr/bin/python3 10
+RUN apt install -y g++ clang clang-format-13 ccache cmake python3 make libopenmpi-dev libhdf5-dev libhdf5-mpi-dev doxygen && update-alternatives --install /usr/bin/python python /usr/bin/python3 10
 RUN apt install -y imagemagick
-RUN ln -s /usr/bin/clang-format-12 /usr/bin/clang-format
+RUN ln -s /usr/bin/clang-format-13 /usr/bin/clang-format
