--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:impish
+FROM ubuntu:devel
 
 LABEL Description="Palabos Docker image, based on ubuntu:latest " maintainer="orestis.malaspinas@hesge.ch" Version="0.1"
 
@@ -8,5 +8,4 @@ ENV TZ=Europe/Zurich
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt install -y g++ clang clang-format-13 ccache cmake python3 make libopenmpi-dev libhdf5-dev libhdf5-mpi-dev doxygen imagemagick && update-alternatives --install /usr/bin/python python /usr/bin/python3 10
-RUN apt install -y libc6-dev
 RUN ln -s /usr/bin/clang-format-13 /usr/bin/clang-format
