--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,7 +80,7 @@ release_clang_serial:
         - pwd
         - cd build
         - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=OFF
-        - cmake --build .
+        - cmake --build . -j4
 
 release_clang_parallel:
     stage: build_cmake
@@ -96,7 +96,7 @@ release_clang_parallel:
         - pwd
         - cd build
         - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=ON
-        - cmake --build .
+        - cmake --build . -j4
 
 release_gcc_serial:
     stage: build_cmake
@@ -112,7 +112,7 @@ release_gcc_serial:
         - pwd
         - cd build
         - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=OFF
-        - cmake --build .
+        - cmake --build . -j4
         
 release_gcc_parallel:
     stage: build_cmake
@@ -129,7 +129,7 @@ release_gcc_parallel:
         - pwd
         - cd build
         - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=ON
-        - cmake --build .
+        - cmake --build . -j4
 
 debug_clang_serial:
     stage: build_cmake
@@ -145,7 +145,7 @@ debug_clang_serial:
         - pwd
         - cd build
         - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=OFF
-        - cmake --build .
+        - cmake --build . -j4
 
 debug_clang_parallel:
     stage: build_cmake
@@ -161,7 +161,7 @@ debug_clang_parallel:
         - pwd
         - cd build
         - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=clang++ -DENABLE_MPI=ON
-        - cmake --build .
+        - cmake --build . -j4
 
 debug_gcc_serial:
     stage: build_cmake
@@ -177,7 +177,7 @@ debug_gcc_serial:
         - pwd
         - cd build
         - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=OFF
-        - cmake --build .
+        - cmake --build . -j4
         
 debug_gcc_parallel:
     stage: build_cmake
@@ -193,7 +193,7 @@ debug_gcc_parallel:
         - pwd
         - cd build
         - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=g++ -DENABLE_MPI=ON
-        - cmake --build .
+        - cmake --build . -j4
         
 pages:
     stage: deploy
